<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PRIMETIME4U</string>
    <string name="action_settings">Settings</string>
    <string name="proposal_tab">Proposal</string>
    <string name="tastes_tab">Tastes</string>
    <string name="watched_tab">Watched</string>
    <string name="already_watched_text">Already watched</string>
    <string name="watch_text">I\'ll watch it</string>
    <string name="welcome_text">Welcome back!</string>
    <string name="channel_text">Channel: %1$s - %2$s</string>
    <string name="time_text">Time: %1$s</string>
    <string name="movie_info_text">Channel: %1$s - Time: %2$s</string>
    <string name="feedback_text">Did you watch \"%1$s\" last night?</string>
    <string name="poster_content_description">Poster</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="add_taste_content_description">Add to your tastes</string>
    <string name="remove_taste_content_description">Remove from your tastes</string>
    <string name="movie">Movie</string>
    <string name="artist">Artist</string>
    <string name="watched_text">Watched on %1$s</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="directors">Directors:</string>
    <string name="writers">Writers:</string>
    <string name="actors">Actors:</string>
    <string name="plot">Plot:</string>
    <string name="action_search">Taste Search</string>
    <string name="skip_button">SKIP</string>
    <string name="app_slogan">The only app that allows you to plop down to the couch and simply enjoy a movie</string>
    <string name="no_proposal">There are no proposal for you</string>
    <string name="no_taste">There are no tastes yet</string>
    <string name="no_watched">There are no already watched movies</string>
    <string name="taste_deleted">Taste deleted</string>
    <string name="taste_added">Taste added</string>
    <string name="undo">UNDO</string>
    <string name="no_more_tutorial">Dont\'t show again</string>
    <string name="got_it">Got it</string>
    <string name="welcome_tastes_tutorial">Welcome into Tastes section</string>
    <string name="tastes_tutorial">Search your favorite movies, artists and genres and add to your tastes</string>
    <string name="welcome_watched_tutorial">Welcome into Watched section</string>
    <string name="welcome_proposal_tutorial">Welcome into Proposal section</string>
    <string name="watched_tutorial">In this section we collect all your watched movies</string>
    <string name="proposal_tutorial">Here you can find all movie proposal evaluated just for you! Check the overflow button on the top-right to setup your app according your preferences!</string>
    <string name="will_watch">You\'ll watch \"%1$s\"</string>
    <string name="watched_added">Movie added into watched list</string>
    <string name="search_hint">Movies, artists, genres</string>
    <string name="generic_error">Sorry, there is an error</string>
    <string name="query_error">Search something…</string>
    <string name="detail_text">Details</string>
    <string name="show_sky">Show SKY</string>
    <string name="show_premium">Show Premium</string>
    <string name="show_free">Show free</string>
    <string name="about">About developers</string>
    <string name="proposal_menu">Menù</string>
    <string name="untaste">Don\'t like it</string>
    <string name="show_more_button">Show more</string>
    <string name="undefined">Undefined</string>
    <string name="dislike">You don\'t like \"%1$s\"</string>
    <string name="choose_tv_type">Choose tv type</string>
    <string name="repeat_choice">Propose already watched movie</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <string name="notification_setting">Enable notification</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="notification_time">Time of notification</string>
    <string name="almost_one_tv_type">You have to set almost one Tv type!</string>
    <string name="share">Share on FB</string>
    <string name="facebook_app_id">1611938555692029</string>
    <string name="facebook_not_installed">Sorry, you should install Facebook app</string>
    <string name="suggested">Suggested by PRIMETIME4U</string>
    <string name="please_wait">Please wait…</string>
    <string name="list_is_complete">All results are shown</string>
    <string name="just_to_start">Please, before starting using the app, tell us some of your favourite movie genres!</string>
    <string name="genre_action">Action</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_romantic">Romance</string>
    <string name="genre_scifi">Sci-Fi</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_western">Western</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="you_like">Genre added: </string>
    <string name="next_button">NEXT</string>
</resources>
